added logo and title

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link rel="stylesheet" href="../index.css">
-  <title>Chat App</title>
+  <title>Jabber Jaw</title>
 </head>
 
 <body>
